--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "authenticated": "^0.1.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^5.0.0-beta.2",
     "i": "^0.3.7",
     "jotai": "^2.7.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "lib": "^5.1.0",
     "mongoose": "^8.2.3",
     "navigate": "^0.3.6",
     "next": "14.1.1",
+    "passport": "^0.7.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
