--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "scripts": { 
+  "scripts": {
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,7 +21,7 @@
     "lib": "^5.1.0",
     "mongoose": "^8.2.3",
     "navigate": "^0.3.6",
-    "next": "14.1.1",
+    "next": "^14.1.1",
     "passport": "^0.7.0",
     "react": "^18",
     "react-dom": "^18",
