--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,12 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "/"
+        "src": "/api/(.*)", // Route API requests to your server.js
+        "dest": "./server.js"
+      },
+      {
+        "src": "/(.*)", // Redirect all other requests to localhost:3000
+        "dest": "http://localhost:3000"
       }
     ]
   }
