--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "./server.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)", // Route API requests to your server.js
-        "dest": "./server.js"
-      },
-      {
-        "src": "/(.*)", // Redirect all other requests to localhost:3000
-        "dest": "http://localhost:3000"
-      }
-    ]
-  }
-  
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
