--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
 "scripts": {
-        "dev": "concurrently \"next dev\" \"node server.js\"",
+        "dev": "next dev",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
-      },
+      }
+,
   "dependencies": {
     "authenticated": "^0.1.0",
     "axios": "^1.6.8",
