--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
 "scripts": {
         "dev": "concurrently \"next dev\" \"node server.js\"",
-        "build": "node server.js",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint"
       }
